
EXTRA_DIST=codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 nls.m4 po.m4 progtest.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4  \
 acx_compile_warn.m4 \
 as-scrub-include.m4 \
 debugmode.m4 \
 docpath.m4 \
 kde.m4 \
 os.m4 \
 pcsc.m4 \
 qt.m4 \
 searchfiles.m4 \
 ssl.m4 \
 types.m4 \
 windoze.m4

sources:

